[gd_scene load_steps=8 format=2]

[ext_resource path="res://jogador.tscn" type="PackedScene" id=1]
[ext_resource path="res://principal.gd" type="Script" id=2]
[ext_resource path="res://inimigo.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://dodge_assets/art/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://dodge_assets/art/gameover.wav" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="principal" type="Node"]
script = ExtResource( 2 )
Inimigo = ExtResource( 3 )

[node name="bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.603922, 0.654902, 0.768627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jogador" parent="." instance=ExtResource( 1 )]
position = Vector2( 240, 450 )

[node name="inicioTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="pontuacaoTimer" type="Timer" parent="."]

[node name="inimigoTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="posicaoinicial" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="caminhoInimigo" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="spawnInimigo" type="PathFollow2D" parent="caminhoInimigo"]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="musica" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="somMorte" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[connection signal="body_entered" from="jogador" to="jogador" method="_on_jogador_body_entered"]
[connection signal="hit" from="jogador" to="." method="game_over"]
[connection signal="timeout" from="inicioTimer" to="." method="_on_inicioTimer_timeout"]
[connection signal="timeout" from="pontuacaoTimer" to="." method="_on_pontuacaoTimer_timeout"]
[connection signal="timeout" from="inimigoTimer" to="." method="_on_inimigoTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="novo_jogo"]
